# Qumulus

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  Info.plist  README.md  developers.sh  resources.qrc
.vimproject/: vimrc
.vimproject/tpl/: test.tpl.cpp  tpl.cpp  tpl.h
data/documentation/: connecting.html  creating.html  credits.html  index.html  intro.html  main.html  modifying.html  popover.html  saving.html  sidebar.html  style.css
data/img/cursor/: class.pxi
logo/: qumulus.icns  winicon.rc
logo/uml/: uml-mac.icns  xmi-mac.icns
src/: .devctl  CMakeLists.txt  main.cpp
src/Qumulus/Gui/: .devctl  SourcesList.txt
src/Qumulus/Gui/Core/: All.h  MoveUndoCommand.cpp  MoveUndoCommand.h  Nyi.cpp  Nyi.h  QumulusApplication.cpp  QumulusApplication.h  ResizeUndoCommand.cpp  ResizeUndoCommand.h  ResourceLoader.cpp  ResourceLoader.h  SideBarModel.cpp  SideBarModel.h  UndoCommand.h  XmlReader.cpp  XmlReader.h  internal_base.h
src/Qumulus/Gui/Diagram/: All.h  AssociationEdge.cpp  AssociationEdge.h  AssociationEndLabel.cpp  AssociationEndLabel.h  AssociationShape.cpp  AssociationShape.h  AssociationShapeKind.h  ClassShape.cpp  ClassShape.h  ClassifierShape.cpp  ClassifierShape.h  CommentShape.cpp  CommentShape.h  Compartment.cpp  Compartment.h  CompartmentableShape.cpp  CompartmentableShape.h  ContainmentEdge.cpp  ContainmentEdge.h  Diagram.cpp  Diagram.h  DiagramElement.cpp  DiagramElement.h  Edge.cpp  Edge.h  EnumShape.cpp  EnumShape.h  FeatureLabel.cpp  FeatureLabel.h  GeneralizationEdge.cpp  GeneralizationEdge.h  KeywordLabel.cpp  KeywordLabel.h  Label.cpp  Label.h  MultiplicityLabel.cpp  MultiplicityLabel.h  NameLabel.cpp  NameLabel.h  (+10 more)
src/Qumulus/Gui/Widgets/: EditorView.cpp  EditorView.h  ElementItem.h  MainWindow.cpp  MainWindow.h  MainWindow.mm  MessageBox.cpp  MessageBox.h  Popover.cpp  Popover.h  PopoverAttribute.h  PopoverClass.h  PopoverComment.h  PopoverEnumeration.h  PopoverForm.h  PopoverLiteral.h  PopoverOperation.h  PopoverPackage.h  PopoverPrimitive.h  SideBar.cpp  SideBar.h  Spacer.cpp  Spacer.h  StatusBar.cpp  StatusBar.h  StyleType.h  ToolBar.cpp  ToolBar.h  ToolBar.mm  ToolBarItem.cpp  ToolBarItem.h  ToolBarMenu.cpp  ToolBarMenu.h  ZoomSlider.cpp  ZoomSlider.h  internal_base.h
src/Qumulus/Gui/Widgets/Mac/: MacToolBar.h  MacToolBar.mm
src/Qumulus/Lib/: .devctl  SourcesList.txt
src/Qumulus/Lib/Core/: All.h  Clonable.h  Container.h  Exception.h  Functional.h  Hash.h  Nyi.h  Optional.h  Ptr.h  Signal.h  UniqueId.cpp  UniqueId.h  Unlimited.h  XmlModelReader.cpp  XmlModelReader.h  internal_base.h
src/Qumulus/Uml/: .devctl  SourcesList.txt
src/Qumulus/Uml/Core/Abstractions/: All.h  Comment.cpp  Comment.h  Element.cpp  Element.h  LiteralSpecification.h  Literals.h  MultiplicityElement.cpp  MultiplicityElement.h  NamedElement.cpp  NamedElement.h  Namespace.cpp  Namespace.h  ValueSpecification.h  VisibilityKind.h  internal_base.h
src/Qumulus/Uml/Core/Constructs/: All.h  BehavioralFeature.h  Class.cpp  Class.h  Classifier.h  DataType.h  Enumeration.h  EnumerationLiteral.cpp  EnumerationLiteral.h  Feature.h  Operation.cpp  Operation.h  PackagableElement.h  Package.cpp  Package.h  Parameter.h  ParameterDirectionKind.h  PrimitiveType.h  Property.cpp  Property.h  RedefinableElement.h  StructuralFeature.h  Type.h  TypedElement.h  internal_base.h
src/Qumulus/Uml/Diagram/: All.h  AssociationEndLabel.cpp  AssociationEndLabel.h  AssociationShape.cpp  AssociationShape.h  AssociationShapeKind.h  ClassifierShape.cpp  ClassifierShape.h  CommentShape.cpp  CommentShape.h  Compartment.cpp  Compartment.h  CompartmentableShape.cpp  CompartmentableShape.h  Diagram.cpp  Diagram.h  DiagramElement.cpp  DiagramElement.h  Edge.cpp  Edge.h  FeatureLabel.cpp  GraphConnector.cpp  GraphConnector.h  GraphEdge.cpp  GraphEdge.h  GraphElement.h  GraphNode.h  KeywordLabel.cpp  KeywordLabel.h  Label.cpp  Label.h  LeafElement.h  MultiplicityLabel.cpp  MultiplicityLabel.h  NameLabel.cpp  NameLabel.h  PackageShape.cpp  PackageShape.h  SelectableShape.cpp  SelectableShape.h  (+5 more)
src/Qumulus/Uml/Kernel/: AggregationKind.h  All.h  Association.cpp  Association.h  BehavioralFeature.cpp  BehavioralFeature.h  Class.cpp  Class.h  Classifier.cpp  Classifier.h  Comment.cpp  Comment.h  DataType.h  DirectedRelationship.h  Element.cpp  Element.h  Enumeration.cpp  Enumeration.h  EnumerationLiteral.cpp  EnumerationLiteral.h  Feature.cpp  Feature.h  Generalization.cpp  Generalization.h  LiteralSpecification.h  Literals.h  MultiplicityElement.cpp  MultiplicityElement.h  NamedElement.cpp  NamedElement.h  Namespace.cpp  Namespace.h  Operation.cpp  Operation.h  PackagableElement.h  Package.cpp  Package.h  PackageableElement.cpp  PackageableElement.h  Parameter.cpp  (+17 more)
test/: .devctl  CMakeLists.txt  NyiHandler.cpp  SourcesList.txt  main.cpp
test/Lib/Core/: Optional.cpp  UniqueId.cpp  Unlimited.cpp
test/Uml/Core/Abstractions/: LiteralSpecification.cpp
test/Uml/Kernel/: Class.cpp  LiteralSpecification.cpp
ui/: popover-attribute.ui  popover-class.ui  popover-comment.ui  popover-enumeration.ui  popover-literal.ui  popover-operation.ui  popover-primitive.ui
